# agentic-django-example

./: .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  docker-compose.yml  manage.py  package.json  pyproject.toml
.github/workflows/: python-app.yml
agentic_django_example/: asgi.py  settings.py  urls.py  wsgi.py
apps/sample_app/: agent_registry.py  apps.py  tools.py  urls.py  views.py
apps/sample_app/prompts/: __init__.py  demo_agent.prompt.md
apps/sample_app/templates/sample_app/: base.html  home.html  login.html
apps/sample_app/templatetags/: sample_app_tags.py
apps/sample_app/tests/: conftest.py  test_home_view.py  test_run_views.py  test_session_items.py
docs/: ARCHITECTURE.md  LEGIBILITY_AUDIT.md  OPERATIONS.md  QUALITY.md  index.md
static/sample_app/: app.js
templates/agentic_django/partials/: conversation.html
tests/: test_repo_legibility.py
